# Autonomous-Drone-Control

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SIMULATION.md  pyproject.toml  python_setup_guide.docx  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  ~$thon_setup_guide.docx
.github/workflows/: ci.yml
src/app/: api.py  flight_controller.py  main.py  models.py  telemetry.py
tests/: conftest.py  test_api.py  test_flight_controller.py  test_main.py  test_telemetry.py
