[project]
name = "app"
version = "0.1.0"
description = "Production-grade Python project"
authors = [
    { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "requests>=2.33.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ------------------------
# Linting & Formatting (Ruff)
# ------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM", "PTH", "T20", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "T20", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ------------------------
# Type Checking (mypy)
# ------------------------
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

# ------------------------
# Testing (pytest)
# ------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing --cov-fail-under=80"
