[project]
name = "drone-autonomy"
version = "0.1.0"
description = "Autonomous drone pipeline: perception, tracking, decision-making, and MAVLink control"
authors = [
    { name = "Griff" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "mavsdk>=1.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

# ------------------------
# Linting & Formatting (Ruff)
# ------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM", "PTH", "T20", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "T20", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ------------------------
# Type Checking (mypy)
# ------------------------
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "mavsdk.*"
ignore_missing_imports = true

# ------------------------
# Testing (pytest)
# ------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"
